src/scss/06_components/paragraphs/_service-list.scss
// Service list is divided into two columns on breakpoint-l if there is more
// than 6 items and less than 20 items in the list.
.service-list:has(li:nth-last-child(n+6)):not(:has(li:nth-last-child(n+21))) {
  @include breakpoint($breakpoint-l) {
    columns: 2;
  }
}

.views--service-list {
  .form-actions .hds-button--primary {
    width: 100%;

    @include breakpoint($breakpoint-m) {
      margin-left: $spacing-and-half;
    }
  }

  .views-exposed-form {
    border-bottom: 1px solid $color-black-10;
    padding-bottom: $spacing-triple;

    @include breakpoint($breakpoint-l) {
      padding-bottom: $spacing-quadruple;
    }

    @include breakpoint($breakpoint-m) {
      align-items: flex-end;
      display: flex;
    }
  }

  .form-item {
    @include breakpoint($breakpoint-m) {
      margin-bottom: 0;
      width: 70%;
    }
  }

  .hds-text-input__input-wrapper {
    &::after {
      @include pseudo-icon('search', 20px, $color-black, block);
      position: absolute;
      right: $spacing;
      top: 50%;
      transform: translateY(-50%);
    }

    .hds-text-input__input {
      border-radius: 0;
      padding-right: $spacing-triple;
    }
  }

  .form-actions {
    @include breakpoint($breakpoint-m) {
      display: flex;
      width: 30%;
    }
  }
}

.service-search__results {
  margin-top: $spacing-and-half;

  @include breakpoint($breakpoint-l) {
    display: flex;
    flex-wrap: wrap;
    margin-inline: calc(-#{$spacing-and-half} / 2);
    margin-top: $spacing-triple;
  }

  .views-row {
    @include breakpoint($breakpoint-l) {
      display: flex;
      flex-wrap: wrap;
      margin-left: calc(-#{$spacing-and-half} / 2);
      margin-right: calc(-#{$spacing-and-half} / 2);
      margin-top: $spacing-triple;
    }
  }
}

.views--service-list--block-search {
  .services-search__results {
    > .views-row + .views-row {
      margin-top: $spacing;
    }
  }
}

.views--service-list--block {
  .views-row {
    @include breakpoint($breakpoint-l) {
      margin-top: $spacing-and-half;
      width: 25%;
    }

    &:nth-child(-n+4) {
      margin-top: 0;
    }
  }
}

.component--service-list-search {
  background-color: $color-silver-light;

  .component__container {
    padding-bottom: $spacing-double;
    padding-top: $spacing-double;

    @include breakpoint($breakpoint-m) {
      padding-bottom: $spacing-quadruple;
      padding-top: $spacing-quadruple;
    }
  }
}

